pubsub: various small changes
Improved logging, javadoc, etc.